--- a/package.json
+++ b/package.json
@@ -9,14 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.3.2",
+    "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
+    "ipfs-http-client": "^53.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/react": "17.0.24",
+    "@types/styled-components": "^5.1.14",
+    "chai": "^4.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.6.4",
     "typescript": "4.4.3"
   }
 }
