--- a/next/package.json
+++ b/next/package.json
@@ -2,6 +2,9 @@
   "name": "next-genie-interfaces",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +13,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
+    "@walletconnect/web3-provider": "^1.6.5",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "ipfs-http-client": "^53.0.0",
@@ -17,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.1",
+    "walletlink": "^2.1.11",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
