--- a/next/package.json
+++ b/next/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
     "@walletconnect/web3-provider": "^1.6.5",
+    "api": "^3.4.0",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "ipfs-http-client": "^53.0.0",
