--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.3.2",
     "@types/dotenv": "^8.2.0",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
