--- a/next/package.json
+++ b/next/package.json
@@ -17,12 +17,13 @@
     "api": "^3.4.0",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
-    "ipfs-http-client": "^53.0.0",
+    "ipfs-http-client": "^53.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.1",
     "walletlink": "^2.1.11",
+    "web3connect": "^1.0.0-beta.33",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
