--- a/next/package.json
+++ b/next/package.json
@@ -21,6 +21,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.0.3",
     "styled-components": "^5.3.1",
     "walletlink": "^2.1.11",
     "web3connect": "^1.0.0-beta.33",
@@ -30,6 +31,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/react": "17.0.24",
+    "@types/react-blockies": "^1.4.1",
     "@types/styled-components": "^5.1.14",
     "chai": "^4.3.4",
     "eslint": "7.32.0",
