--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "dependencies": {
+    "@types/react-blockies": "^1.4.1",
+    "antd": "^4.16.13",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
+    "eth-hooks": "^2.3.9",
     "express": "^4.17.1",
-    "hardhat": "^2.6.4"
+    "hardhat": "^2.6.4",
+    "react-blockies": "^1.4.1",
+    "react-css-theme-switcher": "^0.3.0",
+    "react-toastify": "^8.0.3"
   },
   "devDependencies": {
     "typescript": "^4.4.3"
